--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
       <div class="card-4">
         <img
           class="card-img"
-          src="https://i.picsum.photos/id/1011/200/200.jpg?hmac=ISwJXaLKDOtBGE_n3myoHUev_P_OH3zpWqLx0yHp0pY"
+          src="https://fastly.picsum.photos/id/1011/200/200.jpg?hmac=ISwJXaLKDOtBGE_n3myoHUev_P_OH3zpWqLx0yHp0pY"
         />
         <div class="card-text-wrapper">
-          <div>Kayak ride</div>
-          <div>USD 25</div>
-          <div><b>3</b> spots left</div>
+          <div class="child-1">Kayak ride</div>
+          <div class="child-2">USD 25</div>
+          <div class="child-3"><b>3</b> spots left</div>
           <a class="reserve-btn">Reserve your spot</a>
         </div>
       </div>
